[metadata]
name = raise-tools
version = 1.0.1
author = Rahul Yedida
author_email = rahul@ryedida.me
description = The RAISE lab code checker
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yrahul3910/raise-tools
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.6
install_requires =
    colorama
    pycodestyle

[options.entry_points]
console_scripts =
    raise = main:_main
